--- a/css/HomeStyle.css
+++ b/css/HomeStyle.css
@@ -491,10 +491,11 @@ nav{
 /*Logo Design*/
 
 .logo{
-    padding: 3vh 3vw;
+    padding: 2.5vh 1vw;
     margin-top: 10px;
     text-align: left;
     width: 20vw;
+    margin-left: 10px;
 }
 
 .logo img:hover {
