--- a/css/HomeStyle.css
+++ b/css/HomeStyle.css
@@ -592,8 +592,9 @@ nav{
 @media screen and (max-width: 1067px){
 
     #icon{
-        margin-top: 35px;
+        margin-top: 30px;
         margin-right: 45px;
+        margin-left: 10px;
         width: 25px;
         height: 25px;
     }
