--- a/css/HomeStyle.css
+++ b/css/HomeStyle.css
@@ -147,6 +147,7 @@
     width: 100%;
     max-width: 700px;
     margin: 5em auto;
+    margin-top: 1em;
     filter: drop-shadow(0 0mm 2mm var(--secondary-color));
 }
 
