--- a/css/HomeStyle.css
+++ b/css/HomeStyle.css
@@ -308,7 +308,7 @@
     background-position: center;
     justify-content: center;
     width: 100%;
-    height: 140vh;
+    height: 80vh;
     display: flex;
     align-items: center;
 
@@ -459,7 +459,10 @@ button.testactive{
         min-height: auto;
         margin-left: 0; 
     }
-
+    
+    .testimonialsection{
+        height: 140vh;
+    }
 }
 
 @media screen and (max-width: 720px){
