--- a/css/HomeStyle.css
+++ b/css/HomeStyle.css
@@ -193,7 +193,8 @@
 
 .videogallery{
     position: relative;
-    min-height: 190vh;
+    min-height: 150vh;
+    padding-bottom: 20px;
     background: var(--primary-color);
 
 }
@@ -210,6 +211,26 @@
     font-size: 40px;
     font-weight: bold;
 }
+
+@media (max-width: 700px){
+.videogallery {
+    min-height: 130vh;
+}
+}
+
+@media (max-width: 650px){
+.videogallery {
+    min-height: 10vh;
+}
+}
+
+@media (max-width: 550px){
+.videogallery {
+    min-height: 10vh;
+}
+}
+
+
 
 
 
