--- a/css/HomeStyle.css
+++ b/css/HomeStyle.css
@@ -1147,7 +1147,7 @@ nav{
 
 .contactthankspage{
     width: 100%;
-    padding: 330px 0px;
+    padding: 42vh 0px;
     background: var(--primary-color);
     text-align: center;
 }
